--- a/week-7-mongodb/package.json
+++ b/week-7-mongodb/package.json
@@ -13,6 +13,7 @@
   "type": "commonjs",
   "dependencies": {
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.0"
   }
 }
