--- a/week-8-course/package.json
+++ b/week-8-course/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^5.1.0",
-    "mongoose": "^8.14.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.14.1",
+    "nodemon": "^3.1.10"
   }
 }
