--- a/week-8-course/package.json
+++ b/week-8-course/package.json
@@ -4,7 +4,9 @@
   "description": "Create a course selling app\r Initialize a new Node.js project\r Add Express, jsonwebtoken, mongoose to it as a dependency\r Create index.js\r Add route skeleton for user login, signup, purchase a course, sees all courses, sees the purchased courses course\r Add routes for admin login, admin signup, create a course, delete a course, add course content.\r Define the schema for User, Admin, Course, Purchase\r Add a database (mongodb), use dotenv to store the database connection string\r Add middlewares for user and admin auth\r Complete the routes for user login, signup, purchase a course, see course (Extra points - Use express routing to better structure your routes)\r Create the frontend\r Good to haves",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
